--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "@fontsource-variable/work-sans": "^5.0.18",
     "@fontsource/paytone-one": "^5.0.19",
     "@fontsource/satisfy": "^5.0.18",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
